changed file names and edited links to js/css

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Game</title>
-	<link rel="stylesheet" type="text/css" href="catch_game.css">
-	<script type="text/javascript" src="catch_game.js"></script>
+	<link rel="stylesheet" type="text/css" href="catchgame.css">
+	<script type="text/javascript" src="catchgame.js"></script>
 </head>
 <body onload="basket()">
 	<div id="game-window" class="game-window" onmousemove="basketmove(event)">
